refactor: code indentation and removing unused imports